# binary0

./: .gitignore  CMakeLists.txt  binary.cpp  decode.cpp  encrypt.cpp  readme.md  sml.md
.cache/clangd/index/: binary.cpp.4F5301DC4BF7BE17.idx  cage.h.66A47900C5485D51.idx  cli.cpp.C83C238C8A14DB64.idx  crc32.cpp.2EDFB5260BDC19C2.idx  database.cpp.08004482A4838711.idx  file.cpp.1A3FED5E50039710.idx  io.cpp.D615E3C40679A0AC.idx  record.cpp.8DF6816AA1FBFB4A.idx
include/: cage.h
src/: cli.cpp  crc32.cpp  database.cpp  encrypt.cpp  file.cpp  io.cpp  record.cpp
