cmake_minimum_required(VERSION 3.10)
project(binary)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


file(GLOB BINARY_SOURCES "src/*.cpp")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(binarylib SHARED ${BINARY_SOURCES})
file(MAKE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(MAKE_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
target_include_directories(binarylib PUBLIC ${CMAKE_SOURCE_DIR}/include)
add_executable(binary binary.cpp)
target_link_libraries(binary PRIVATE binarylib)
add_executable(encrypt encrypt.cpp)
target_link_libraries(encrypt PRIVATE binarylib)